package Protocol.Gate.G2CM;
message MSG_G2CM_Heartbeat {
	required int32 GroupId =  1;
	required int32 SubId =  2;
}

message MSG_G2CM_Register {
	required int32 GroupId =  1;
	required int32 SubId =  2;
}

